Ticket #14750 (closed defect: fixed)

Opened 7 months ago

Last modified 7 months ago

Bug with wxInfoBar close button on OSX

Reported by: swiss_kinkajou Owned by:
Priority: normal Milestone: 2.9.5
Component: wxOSX-Cocoa Version: 2.9-svn
Keywords: wxInfoBar close button OSX regression Cc:
Blocked By: Patch: no
Blocking:

Description

Since changeset 72474 there is a bug with wxInfoBar. The close button always appears on the top left part of the window, even when the wxInfoBar isn’t visible. Moreover, clicking on the button when the wxInfoBar is visible didn’t close the wxInfoBar.
This strange behavior is visible on the dialog sample.

My config options are :

../configure --enable-unicode --disable-monolithic --disable-shared  --with-osx_cocoa

Attachments

72473.png download (37.0 KB) - added by swiss_kinkajou 7 months ago.
72473
72474.png download (37.4 KB) - added by swiss_kinkajou 7 months ago.
72474

Change History

Changed 7 months ago by vadz

  • keywords regression added

Interesting... r72474 was supposed to be a completely neutral refactoring, I have no idea how could it have broken this. Are you quite sure about it, i.e. does just reverting this commit really fix the problem?

Changed 7 months ago by swiss_kinkajou

72473

Changed 7 months ago by swiss_kinkajou

72474

Changed 7 months ago by swiss_kinkajou

I just rebuild wxWidgets 72473 and 72474 side by side and in the 72473 the problem doesn’t occur.
I made two screenshots, in the first one (72473) there is no problem while in the second (72474) we see a strange close button (top left).

72473

72474

Changed 7 months ago by VZ

  • status changed from new to closed
  • resolution set to fixed

(In [72690]) Use the correct window as parent of wxInfoBar close button.

Fix breakage of r72474 that used the parent window instead of wxInfoBar itself
as the parent of its close button.

Closes #14750.

Changed 7 months ago by vadz

Sorry, I'm blind, I did break it in r72474. Hopefully it's fixed now, but I didn't test it yet, please reopen if it isn't.

Note: See TracTickets for help on using tickets.