Use the correct window as parent of wxInfoBar close button.

Fix breakage of r72474 that used the parent window instead of wxInfoBar itself
as the parent of its close button.

Closes #14750.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@72690 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775